# nepygui

./: Makefile  README.md  layouts.py  setup.cfg  setup.py
gui/: __init__.py  colors.py  layouts.py  text.py  widgets.py  window.py
nepygui/: __init__.py  fps.py  layouts.py  window.py
src/nepygui/: __init__.py  layouts.py  widgets.py  window.py
tests/: basic_test.py  context.py
