[options]
packages = find:
install_requires = file: requirements.txt
include_package_data = True
package_dir =
    =src

[options.package_data]
nepygui = 
    py.typed

[options.packages.find]
where = src/

[metadata]
name = nepygui
version = attr: nepygui.__version__
author = kleist0202
author_email = pk0202@protonmail.com
url = https://github.com/kleist0202/nepygui
description = Non-extraordinary python GUI written in pygame.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nepygui, setuptools, gui
license = GPL2
classifiers =
    Programming Language :: Python :: 3
